fix: align Page Style dialog->area tab control to start in writer and calc

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -2980,3 +2980,9 @@ kbd,
 #ContentControlDialog #tabindexlabel {
 	width: max-content;
 }
+
+/* Writer - Format - Page Style */
+div [id^='TemplateDialog'] #tabcontrol #Area.jsdialog,
+#PageTemplateDialog #tabcontrol #Background.jsdialog {
+	align-self: start;
+}
